--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dropbox",
+  "name": "dropbox-upload",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,14 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.9",
+    "dotenv": "^5.0.0",
+    "dropbox": "^3.0.4",
     "ejs": "^2.5.7",
     "express": "^4.15.5",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
